[package]
name = "RustOS"
version = "0.1.0"
edition = "2018"

[dependencies]


# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable unwinding by aborting on panic.


# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable unwinding by aborting on panic.
