[package]
name = "RustOS"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"


# the profile used for `cargo build`
[profile.dev]
# panic = "abort" # disable unwinding by aborting on panic.

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable unwinding by aborting on panic.


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Automatically exits QEMU during a test
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
# bootimage maps success exit code to exit code 0, thus cargo test 
# recognises it as success case and does not count it as failed.
test-success-exit-code = 33
